manifests/manifest.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yourapp-blue
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yourapp-blue
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: yourapp-blue
    spec:
      containers:
      - image: repo/image
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 80
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
      - name: us-east-1-ecr-registry
---
kind: Service
apiVersion: v1
metadata:
  name: yourapp-blue
  labels:
    app: yourapp-blue
spec:
  selector:
    app: yourapp-blue
  ports:
  - name: web
    port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yourapp-blue
spec:
  rules:
  - host: yourapp.com.br
    http:
      paths:
      - backend:
          serviceName: yourapp-blue
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yourapp-green
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yourapp-green
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: yourapp-green
    spec:
      containers:
      - image: repo/image
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 80
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
---
kind: Service
apiVersion: v1
metadata:
  name: yourapp-green
  labels:
    app: yourapp-green
spec:
  selector:
    app: yourapp-green
  ports:
  - name: web
    port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yourapp-green
spec:
  rules:
  - host: yourapp-hmg.com.br
    http:
      paths:
      - backend:
          serviceName: yourapp-green
          servicePort: 80
        path: /
